<resources>
    <string name="app_name">StepX</string>
    <string name="stepx">StepX</string>
    <string name="run">run</string>
    <string name="_0">0</string>
    <string name="steps_count">Steps Count</string>
    <string name="__0">0</string>
    <string name="today_s_burnt_calories">Today\'s Burnt Calories</string>
    <string name="___0">0</string>
    <string name="today_s_distance_covered">Today\'s Distance Covered(in Meters)</string>
    <string name="home">Home</string>
    <string name="health">Health</string>
    <string name="info">Info</string>
    <string name="account">Account</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="my_account">My Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password1">Enter Password</string>
    <string name="login2">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register1">REGISTER</string>
    <string name="login1">LOGIN</string>
    <string name="already_registered">Already Registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register2">Register</string>
    <string name="bmi_calculator1">BMI Calculator</string>
    <string name="enter_your_weight_kg">Enter Your Weight (kg):</string>
    <string name="enter_your_height_cm">Enter Your Height (cm):</string>
    <string name="calculate">Calculate</string>
    <string name="your_bmi">Your BMI</string>
    <string name="longtap">Long Tap to Reset Steps</string>
    <string name="hold">Hold To Reset Steps</string>
    <string name="exercise_tracker">Exercise Tracker</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="sets">Sets</string>
    <string name="repetitions">Repetitions</string>
    <string name="date_in_dd_mm_yyyy_format">Date in dd/mm/yyyy format</string>
    <string name="add11">ADD</string>
    <string name="exercise111">Exercise</string>
    <string name="sets11111">Sets</string>
    <string name="reps11">Reps</string>
    <string name="date1111">Date</string>
    <string name="exercise_tracker1121">EXERCISE TRACKER</string>
    <string name="bench_press">Bench Press</string>
    <string name="_3111">3</string>
    <string name="_10111">10</string>
    <string name="_26_12_2020111">26/12/2020</string>
    <string name="pull_ups">Pull Ups</string>
    <string name="_411">4</string>
    <string name="_511111">5</string>
    <string name="_26_12_2020234">26/12/2020</string>
    <string name="_28_12_20202222">28/12/2020</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="sleep">Sleep</string>
    <string name="water112">Water</string>
    <string name="sleep214">Sleep</string>
    <string name="enter_age223">Enter Age</string>
    <string name="enter_height_cm22">Enter height(cm)</string>
    <string name="enter_weight_kg22">Enter weight(kg)</string>
    <string name="calculate2142">Calculate</string>
    <string name="water_intake">Water Intake</string>
    <string name="enter_weight_kg54">Enter weight(Kg)</string>
    <string name="enter_duration_of_workout_minutes_day">Enter Duration of Workout (minutes/day)</string>
    <string name="calculate532">Calculate</string>
    <string name="diet_plan432">Diet Plan</string>
    <string name="workout_plan386">Workout Plan</string>
    <string name="diet9744">6:30 AM Cucumber Detox Water(1 glass)\n\n 8:00 AM Oats Porridge in Skimmed Milk(1 bowl) Mixed Nuts(25 grams)\n\n 12:00 PM Skimmed Milk Paneer(100 grams)\n\n 2:00 PM Mixed Vegetable Salad(1 katori)\n\n 2:10 PM Dal(1 katori)Gajar Matar Sabzi(1 katori) Roti (1 roti/chapati)\n\n 4:00 PM Cut Fruits(1 cup)Buttermilk(1 glass)\n\n 5:30 PM Tea with Less Sugar and Milk(1 teacup)\n\n 8:50 PM Mixed Vegetable Salad(1 katori)\n\n 9:00 PM Dal(1 katori)Lauki Sabzi(1 katori) Roti (1 roti/chapati)\n\n</string>
    <string name="emaildcjs">Email</string>
    <string name="passwordssss">Password</string>
    <string name="steps_count_nhold_to_reset_steps">Steps Count\nHold To Reset Steps</string>
</resources>