<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stepx.Activity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D4E4F8"
        android:orientation="vertical"
        tools:context="com.example.stepx.Activity2"
        tools:layout_editor_absoluteX="-108dp"
        tools:layout_editor_absoluteY="-35dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/stepx"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:innerRadius="0dp"
            android:shape="ring"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="110dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/run"
                    android:src="@drawable/run" />

                <TextView
                    android:id="@+id/TV_STEPS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/_0"
                    android:textColor="#3D6CFC"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="       Steps Count\nHold To Reset Steps" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    android:id="@+id/TV_CALORIES"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/_0"
                    android:textColor="#3D6CFC"
                    android:textSize="25sp"
                    app:drawableLeftCompat="@drawable/calories" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    android:text="@string/today_s_burnt_calories" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    android:id="@+id/TV_DISTANCE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/_0"
                    android:textColor="#3D6CFC"
                    android:textSize="25sp"
                    app:drawableLeftCompat="@drawable/distance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    android:text="@string/today_s_distance_covered" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bmi_calculator" />


            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/water112" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>
